Volume path change

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,9 @@ services:
       - "7860:7860" # Open port
       - "8888:8888"
     volumes: 
-      - ./data:/Gallica_App # Mount the current directory on your computer to /workdir in the container , chan 
+      - Gallica_App:/Gallica_App # Mount the current directory on your computer to /workdir in the container , chan 
     runtime: nvidia  # Use NVIDIA Container Toolkit
+    # Jupyter and Gradio are running
     command: /bin/bash -c "jupyter lab --ip='0.0.0.0' --port=8888 --no-browser --allow-root & python3 Gallica_App/src/test/test_app.py"
     deploy:   
       resources:
