--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,15 @@ services:
     environment:
       - GRADIO_SERVER_NAME=0.0.0.0
       - GRADIO_SERVER_PORT=7860
+      - SHELL=/bin/bash  # Set the SHELL environment variable
     ports:
       - "7860:7860" # Open port
       - "8888:8888"
     volumes: 
-      - Gallica_App:/Gallica_App # Mount the current directory on your computer to /workdir in the container , chan 
+      - ./Gallica_App:/root/Gallica_App
     runtime: nvidia  # Use NVIDIA Container Toolkit
     # Jupyter and Gradio are running
-    command: /bin/bash -c "jupyter lab --ip='0.0.0.0' --port=8888 --no-browser --allow-root & python3 Gallica_App/src/test/test_app.py"
+    command: /bin/bash -c "jupyter lab --ip='0.0.0.0' --port=8888 --no-browser --allow-root"
     deploy:   
       resources:
         reservations:
@@ -22,5 +23,6 @@ services:
           - driver: nvidia
             count: 1
             capabilities: [gpu]
-
+volumes:
+  Gallica_App:
 
