Modif structure + ajout app basic

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ Gallica_App/src/.ipynb_checkpoints
 */*/.ipynb_checkpoints
 */.ipynb_checkpoints
 */*/*/.ipynb_checkpoints
-Gallica_App/models
+Gallica_App/weights
 Gallica_App/*/__pycache__
 Gallica_App/notebooks/output
